@@ -49,6 +49,7 @@ import java.util.List;
 import java.net.URL;
 import java.net.MalformedURLException;
 
+import java.net.URISyntaxException;
 import org.netbeans.api.project.ProjectManager;
 import org.netbeans.modules.j2me.cdc.platform.CDCDevice;
 import org.netbeans.modules.j2me.cdc.platform.CDCPlatform;
@@ -166,7 +167,9 @@ public class PlatformConvertor implements Environment.Provider, InstanceCookie.O
                 ex.printStackTrace();
                 if (x instanceof java.io.IOException)
                     throw (IOException)x;
-                throw new java.io.IOException(ex.getMessage());
+                IOException ioe = new IOException(ex.getMessage());
+                ioe.initCause(x);
+                throw ioe;
             }
 
             CDCPlatform inst = createPlatform(handler);
@@ -624,9 +627,17 @@ public class PlatformConvertor implements Environment.Provider, InstanceCookie.O
             }
             else if (ELEMENT_RESOURCE.equals(qName)) {
                 try {
-                    this.path.add (new URL(this.buffer.toString()));                    
+                    //make sure, that after install URL is resolved correctly
+                    URL url = new URL(this.buffer.toString());
+                    try {
+                        url.toURI(); //test URI
+                        this.path.add (url);
+                    } catch (URISyntaxException e) {
+                        File f = new File(url.getPath());
+                        this.path.add (f.toURI().toURL());
+                    }
                 } catch (MalformedURLException mue) {
-                    ErrorManager.getDefault().notify(mue); 
+                    ErrorManager.getDefault().notify(mue);
                 }
                 this.buffer = null;
             }
